--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+
+<div class="container">
+  <div class="row center">
+    <person *ngFor="let x of people"
+      [person]="x">
+    </person>
+  </div>
+</div>
